--- a/config.example.json
+++ b/config.example.json
@@ -1,45 +1,63 @@
 {
-    "connection_string": "mongodb+srv://<USER>:<PASSWORD>@<HOST>/<DB?retryWrites=true&w=majority",
-    "binance": {
-        "api_key": "<API_KEY>",
-        "api_secret": "<API_SECRET>",
-        "single_buy_order_amount_in_btc": 0.0007
-    },
-    "discord": {
+  "binance": {
+    // Api Key and secret - Get it from https://www.binance.com/en-IN/support/faq/360002502072
+    "api_key": "<API_KEY>",
+    "api_secret": "<API_SECRET>",
+    // An Amount in BTC you want to spend against a single order.
+    "single_buy_order_amount_in_btc": 0.0007
+  },
+  // Save signal activities and stats to mongo db.
+  "mongo_db": {
+    "enable": true,
+    "connection_string": "mongodb+srv://<USER>:<PASSWORD>@<HOST>/<DB?retryWrites=true&w=majority"
+  },
+  // Setup and tweaks for discord
+  "discord": {
+    // This script supports reading multiple signals from different servers
+    // And it can read signals from multiple channels too
+    "signal_servers": [
+      {
+        "server_id": "<DISCORD_SERVER_ID>",
+        // Headers are used to talk to discord apis
         "headers": {
-            "user": {
-                "Authorization": "<USER_AUTH_TOKEN>",
-                "User-Agent": "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) discord/0.0.309 Chrome/83.0.4103.122 Electron/9.3.5 Safari/537.36"
-            },
-            "bot": {
-                "Authorization": "Bot <BOT_AUTH_TOKEN>",
-                "User-Agent": "discord-binance-bot (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) discord/0.0.309 Chrome/83.0.4103.122 Electron/9.3.5 Safari/537.36"
+          // User headers are to read message from a discord server/channel
+          "authorization": "<DISCORD_TOKEN -- HOW? -> https://discordhelp.net/discord-token >",
+          "user_agent": "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) discord/0.0.309 Chrome/83.0.4103.122 Electron/9.3.5 Safari/537.36"
+        },
+        "channels": [
+          {
+            // Read and parse signal messages only from the following author ids.
+            "channel_id": "<CHANNEL_ID>",
+            "author_ids": [
+              {
+                "author_id": "<AUTHOR_ID>",
+                "message_templates": [
+                  "<@&405020161045954600> \n#$symbol/$base_curr at ($platform) \n\nWe Buy between $buy_range_1-$buy_range_2\n\nWe Take Profit - $t1-$t2-$t3-$t4\n\nStop around - $stop_loss",
+                  "<@&405020161045954600> \n#$symbol/$base_curr at ($platform) \n\nWe Buy between $buy_range_1-$buy_range_2\n\nWe Take Profit $t1-$t2-$t3-$t4\n\nStop around - $stop_loss",
+                  "<@&405020161045954600>\n#$symbol/$base_curr at ($platform) \n\nWe Buy between $buy_range_1-$buy_range_2\n\nWe Take Profit $t1-$t2-$t3-$t4\n\nStop around - $stop_loss",
+                  "<@&405020161045954600>\n#$symbol/$base_curr at ($platform)\n\nWe Buy around $buy_range_1-$buy_range_2\n\nOur Selling Targets - $t1-$t2-$t3-$t4\n\nStop around \\u2013 $stop_loss",
+                  "<@&405020161045954600>\n#$symbol/$base_curr at ($platform)\n\nWe Buy around $buy_range_1-$buy_range_2\n\nOur Selling Targets - $t1-$t2-$t3-$t4\n\nStop around - $stop_loss"
+                ]
+              }
+            ],
+            "oco_targets": {
+              "t1": 0.25,
+              "t2": 0.5,
+              "t3": 0.25
             }
-        }
-    },
-    "oco_targets": {
-        "t1": 0.25,
-        "t2": 0.50,
-        "t3": 0.25
-    },
-    "servers": {
-        "398075210949066764": [
-            "398075210949066766"
+          }
         ]
-    },
-    "stats_server": {
-        "guildId": "916944698650800138",
-        "channelId": "916944698650800141"
-    },
-    "author_ids": [
-        "862346622611750964"
+      }
     ],
-    "templates": {
-        "862346622611750964": [
-            "<@&405020161045954600> \n#$symbol/$base_curr at ($platform) \n\nWe Buy between $buy_range_1-$buy_range_2\n\nWe Take Profit - $t1-$t2-$t3-$t4\n\nStop around - $stop_loss",
-            "<@&405020161045954600> \n#$symbol/$base_curr at ($platform) \n\nWe Buy between $buy_range_1-$buy_range_2\n\nWe Take Profit $t1-$t2-$t3-$t4\n\nStop around - $stop_loss",
-            "<@&405020161045954600>\n#$symbol/$base_curr at ($platform) \n\nWe Buy between $buy_range_1-$buy_range_2\n\nWe Take Profit $t1-$t2-$t3-$t4\n\nStop around - $stop_loss",
-            "<@&405020161045954600>\n#$symbol/$base_curr at ($platform)\n\nWe Buy around $buy_range_1-$buy_range_2\n\nOur Selling Targets - $t1-$t2-$t3-$t4\n\nStop around \u2013 $stop_loss"
-        ]
+    // A server where the discord bot will push signal stats
+    "bot_stats_server": {
+      "enable": true,
+      "server_id": "<SERVER_ID_IN_WHICH_BOT_IS_ADDED>",
+      "channel_id": "<CHANNEL_ID>",
+      "headers": {
+        "authorization": "Bot <DISCORD_TOKEN -- HOW? -> https://discordhelp.net/discord-token >",
+        "user_agent": "discord-binance-bot (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) discord/0.0.309 Chrome/83.0.4103.122 Electron/9.3.5 Safari/537.36"
+      }
     }
+  }
 }
