add location in config.json

--- a/config.example.json
+++ b/config.example.json
@@ -50,6 +50,13 @@
               "t3": 0.25
             }
           }
+        ],
+        "locations":[
+          {
+            "IN":"INDIA",
+            "US":"USA",
+            "CA":"CANDA"
+          }
         ]
       }
     ],
